// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders default styling correctly 1`] = `
<Icon>
  <svg
    className="c-btn__icon"
    data-garden-id="buttons.icon"
    data-garden-version="version"
  />
</Icon>
`;

exports[`Icon renders rotated styling if provided 1`] = `
<Icon
  rotated={true}
>
  <svg
    className="c-btn__icon is-rotated"
    data-garden-id="buttons.icon"
    data-garden-version="version"
  />
</Icon>
`;
